# codex-usage-tracker

./: .gitignore  README.md  pyproject.toml
daemon/: com.lux.codex-dashboard.plist  com.lux.codex-usage-ledger-autocommit.plist  com.lux.codex-usage-tracker.plist  install.sh  setup-tailscale.sh  status.sh  uninstall.sh
docs/: model-routing-metrics-and-tracker-requirements-2026-06-06.md
src/codex_usage_tracker/: __main__.py  auth.py  capability_matrix.py  cli.py  codex_call_accounting.py  dashboard.py  fetcher.py  git_autocommit.py  jsonl_store.py  ledger.py  policy_state.py  provider_spend.py  token_correlation.py
src/codex_usage_tracker/templates/: index.html
tests/: test_auth_path.py  test_codex_call_accounting.py  test_dashboard_api.py  test_git_autocommit.py  test_ledger.py  test_policy_state.py  test_token_correlation.py
